Assignment2_Zhao_Duo/tests/automated/tests/good/BasicNumbers.calc
a .0 b 1. c 2.3 d 34.5 e 6.78 f 99.99 g 5 h 78
.0
1.
2.3
34.5
6.78
99.99
5
78
