Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigMinusWithBadCharacters-36Chomped.calc
a .0E-%23 b 1.E-%25 c 2.3E-%31 d 34.5E-%45 e 6.78E-%73 f 99.99E-%56 g 3E-%93 h 76E-%45